# opencascade-rs

./: Cargo.toml
crates/opencascade/: Cargo.toml
crates/opencascade-sys/: Cargo.toml  build.rs
crates/opencascade-sys/OCCT/: CMakeLists.txt
crates/opencascade-sys/examples/: bottle.rs
crates/opencascade-sys/include/: wrapper.hxx
crates/opencascade-sys/src/: lib.rs
crates/opencascade-sys/tests/: triangulation.rs
crates/opencascade/src/: angle.rs  bounding_box.rs  law_function.rs  lib.rs  make_pipe_shell.rs  mesh.rs  primitives.rs  section.rs  workplane.rs
crates/opencascade/src/primitives/: boolean_shape.rs  edge.rs  face.rs  shape.rs  shell.rs  solid.rs  surface.rs  vertex.rs  wire.rs
