[package]
name = "opencascade"
description = "A high level Rust wrapper to build 3D models in code, using the OpenCascade CAD kernel"
authors = ["Brian Schwind <brianmschwind@gmail.com>"]
license = "LGPL-2.1"
version = "0.2.0"
edition = "2021"
repository = "https://github.com/bschwind/opencascade-rs"

[dependencies]
cxx = "1"
opencascade-sys = { version = "0.2", path = "../opencascade-sys" }
nalgebra = { version = "0.34.1", features = ["bytemuck"] }
thiserror = "1"

[features]
default = ["builtin"]
builtin = ["opencascade-sys/builtin"]
